[gd_scene load_steps=4 format=3 uid="uid://lqm5228wqvl6"]

[ext_resource type="Script" uid="uid://b1r0xrvnff084" path="res://scenes/sell_portal/sell_portal.gd" id="1_7mc5g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7mc5g"]
size = Vector2(122.5, 13.4583)

[sub_resource type="LabelSettings" id="LabelSettings_tn5u3"]
font_size = 45
shadow_color = Color(0, 0, 0, 0.694118)

[node name="SellPortal" type="Area2D"]
script = ExtResource("1_7mc5g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1010, 79.25)
scale = Vector2(12, 12)
shape = SubResource("RectangleShape2D_7mc5g")

[node name="Gold" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_top = 67.0
offset_right = 64.0
offset_bottom = 85.0
alignment = 1

[node name="GoldLabel" type="Label" parent="Gold"]
unique_name_in_owner = true
layout_mode = 2
text = "11"
label_settings = SubResource("LabelSettings_tn5u3")
horizontal_alignment = 1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
